# TDDforEmbeddedC_Chapter8

./: .gitignore  README.md  configure.ac
src/: LightController.c  LightController.h  LightScheduler.c  LightScheduler.h  Makefile.am  TimeService.c  TimeService.h  main.c
test/: FakeTimeService.c  FakeTimeService.h  FakeTimeServiceTest.cpp  LightControllerSpy.c  LightControllerSpy.h  LightControllerSpyTest.cpp  LightSchedulerTest.cpp  Makefile.am
